data/2026-05/data-15.txt
[2026-05-15 12:08:01] [GLaDOS]
✅ 加载 cookie 数量：3
🔐 正在签到 [1/3]...
✅ [1] tu********@gmail.com
Checkin! Got 9 Points
当前积分 103
剩余天数 21 天
🔐 正在签到 [2/3]...
✅ [2] 77*******@qq.com
Checkin! Got 7 Points
当前积分 16
剩余天数 14 天
🔐 正在签到 [3/3]...
✅ [3] 22********@qq.com
今日已签到
当前积分 6
剩余天数 374 天

🚀 GLaDOS 签到结果
───
📋账号 1:
邮箱: tu********@gmail.com
签到: ✅ 成功，获得9积分
剩余天数: 21 天
当前积分: 103
📋账号 2:
邮箱: 77*******@qq.com
签到: ✅ 成功，获得7积分
剩余天数: 14 天
当前积分: 16
📋账号 3:
邮箱: 22********@qq.com
签到: ⚠️ 今日已签到
剩余天数: 374 天
当前积分: 6
──────────────────────────────────────────────────
[2026-05-15 12:34:07] [GLaDOS]
✅ 加载 cookie 数量：3
🔐 正在签到 [1/3]...
✅ [1] tu********@gmail.com
今日已签到
当前积分 103
剩余天数 21 天
🔐 正在签到 [2/3]...
✅ [2] 77*******@qq.com
今日已签到
当前积分 16
剩余天数 14 天
🔐 正在签到 [3/3]...
✅ [3] 22********@qq.com
今日已签到
当前积分 6
剩余天数 374 天

🚀 GLaDOS 签到结果
───
📋账号 1:
邮箱: tu********@gmail.com
签到: ⚠️ 今日已签到
剩余天数: 21 天
当前积分: 103
📋账号 2:
邮箱: 77*******@qq.com
签到: ⚠️ 今日已签到
剩余天数: 14 天
当前积分: 16
📋账号 3:
邮箱: 22********@qq.com
签到: ⚠️ 今日已签到
剩余天数: 374 天
当前积分: 6
──────────────────────────────────────────────────
[2026-05-15 12:38:40] [XBGame]
🔐 正在登录小白游戏网...
✅ 登录成功
👤 用户昵称: 用户9527 
💰 当前积分: 1106 
🎯 正在签到...
⚠️ 今日已签到过，签到积分: 65
──────────────────────────────────────────────────
[2026-05-15 12:44:58] [Whois-domain]
Checking domain: caihongtu.com
✅ 域名 caihongtu.com 状态正常，剩余 302 天有效期
──────────────────────────────────────────────────
[2026-05-15 15:04:38] [GLaDOS]
/home/runner/work/GithubActionsList/GithubActionsList/GLaDOS/checkin.js:189
      } catch (err) {
        ^^^^^

SyntaxError: Unexpected token 'catch'
    at wrapSafe (node:internal/modules/cjs/loader:1637:18)
    at Module._compile (node:internal/modules/cjs/loader:1679:20)
    at Object..js (node:internal/modules/cjs/loader:1838:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49

Node.js v22.22.2
──────────────────────────────────────────────────
